// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Power (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2e1a29",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "red",
              "flex": 2,
              "margin": 5,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "margin": 5,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "green",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2e1a29",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "red",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with allied/enemy players) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2e1a29",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "red",
              "flex": 2,
              "margin": 5,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "margin": 5,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "green",
              }
            }
          >
            1
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2e1a29",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "red",
              }
            }
          >
            3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with progress) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2e1a29",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "red",
              "flex": 2,
              "margin": 5,
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "margin": 5,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "green",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2e1a29",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "red",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with progress, timeLeft and allied/enemy players) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2e1a29",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "red",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          00:00:25
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "margin": 5,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "green",
              }
            }
          >
            1
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2e1a29",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "red",
              }
            }
          >
            3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Power (with timeLeft) => renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2f3241",
      "flex": 1,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#02ffff",
        "borderRadius": 2,
        "flex": 1,
        "padding": 2,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#2f3241",
          "borderRadius": 2,
          "flex": 1,
          "justifyContent": "center",
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(2, 255, 255, 1)",
            "borderRadius": 2,
            "flex": 1,
            "height": "100%",
            "position": "absolute",
            "width": "NaN%",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "elevation": 6,
            "flexDirection": "row",
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#2e1a29",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          ...
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "red",
              "flex": 2,
              "margin": 5,
            }
          }
        >
          00:00:25
        </Text>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "margin": 5,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "green",
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#2e1a29",
              }
            }
          >
            /
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "red",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
